fix: playerbox no longer in least visible position

--- a/mods/settlers/web/style.css
+++ b/mods/settlers/web/style.css
@@ -1,12 +1,4 @@
 
-
-:root{
-  --p1-color: /*#e44;*/ #fb2215;
-  --p2-color: /*#049;*/ #15eefb;
-  --p3-color: /*#094;*/ #7bfb15;
-  --p4-color: /*#D63;*/ #9515fb;
-}
-
 .tip{
   width: unset;
 }
@@ -649,6 +641,7 @@ ul.horizontal_list li.iconoption{
 }
 
 
+
 /*Sit graphic on top of playerbox*/
 .me > .player-box-graphic{
   position: absolute;
@@ -847,9 +840,9 @@ ul.horizontal_list li.iconoption{
   max-height: unset;
   max-width: 300px;
   min-width: 250px;
-  left: 1px;
-  top: unset;
-  bottom: 1px;
+  left: 10px;
+  top: 56px;
+  bottom: unset;
 }
 
 /*Stats overlay table*/
